name:          th-printf
version:       0.5.1
synopsis:      Compile-time printf
description:   Quasiquoters for printf: string, bytestring, text.
license:       MIT
license-file:  LICENSE
author:        Jude Taylor
maintainer:    me@jude.xyz
category:      Text
homepage:      https://github.com/pikajude/th-printf
build-type:    Simple
cabal-version: 2.0

source-repository head
  type:     git
  location: git://github.com/pikajude/th-printf.git

library
  exposed-modules:  TH.Printf
  hs-source-dirs:   src
  build-depends:    base == 4.*, printf-str
  default-language: Haskell2010

library printable-str
  exposed-modules: Printable
  hs-source-dirs:  backend/str
  build-depends:   base

library printf-module
  exposed-modules: TH.Printf
  signatures:      Printable
  hs-source-dirs:  module
  build-depends:   base

library printf-str
  reexported-modules: TH.Printf as TH.Printf.String
  build-depends:      printable-str, printf-module
