name:          th-printf-indef
version:       0.5.1
synopsis:      Indefinite package for th-printf
description:
  Quasiquoters for printf: string, bytestring, text.
  .
  This package is indefinite. See @th-printf-text@ or @th-printf-str@ for implementations.
license:       MIT
license-file:  LICENSE
author:        Jude Taylor
maintainer:    me@jude.xyz
tested-with:   GHC == 8.4.3
category:      Text
homepage:      https://github.com/pikajude/th-printf
build-type:    Simple
cabal-version: 2.0

source-repository head
  type:     git
  location: git://github.com/pikajude/th-printf.git

library
  exposed-modules:  Language.Haskell.Printf
                    NumUtils
  signatures:       Str
  other-modules:    Language.Haskell.Printf.Geometry
                    Language.Haskell.Printf.Printers
                    Language.Haskell.PrintfArg
  hs-source-dirs:   src
  build-depends:    base == 4.*, parser, str-sig, template-haskell
  default-language: Haskell2010

library parser
  exposed-modules:  Parser
                    Parser.Types
  hs-source-dirs:   parser
  build-depends:    base, charset, containers, parsec, template-haskell
  default-language: Haskell2010

library format-impl
  exposed-modules:  Impl.Str
  hs-source-dirs:   tests
  build-depends:    base
  default-language: Haskell2010

executable gen-tests
  main-is:          Main.hs
  hs-source-dirs:   tests/gen
  build-depends:    base
  default-language: Haskell2010

test-suite format
  type:             exitcode-stdio-1.0
  main-is:          format.hs
  mixins:           th-printf-indef  requires (Str as Impl.Str)
  hs-source-dirs:   tests
  build-depends:    base
                  , HUnit
                  , QuickCheck
                  , format-impl
                  , hspec
                  , template-haskell
                  , th-printf-indef
  default-language: Haskell2010
