name:          th-printf-indef
version:       0.1.0
synopsis:      Indefinite package for th-printf
description:
  Quasiquoters for printf: string, bytestring, text.
  .
  This package is indefinite. See @th-printf-text@ or @th-printf-str@ for implementations.
license:       MIT
license-file:  LICENSE
author:        Jude Taylor
maintainer:    me@jude.xyz
tested-with:   GHC == 8.4.3
category:      Text
homepage:      https://github.com/pikajude/th-printf
build-type:    Simple
cabal-version: 2.0

source-repository head
  type:     git
  location: git://github.com/pikajude/th-printf.git

flag werror
  default:     False
  manual:      True
  description: Build with -Werror

library
  exposed-modules:  Language.Haskell.Printf
  signatures:       Str
  other-modules:    Language.Haskell.Printf.Geometry
                    Language.Haskell.Printf.Printers
                    Language.Haskell.PrintfArg
                    NumUtils
  hs-source-dirs:   src
  build-depends:    base == 4.*, parser, str-sig, template-haskell
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(werror)
    ghc-options: -Werror

library parser
  exposed-modules:  Parser
                    Parser.Types
  hs-source-dirs:   parser
  build-depends:    base
                  , charset
                  , containers
                  , microlens-platform
                  , mtl
                  , parsec
                  , template-haskell
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(werror)
    ghc-options: -Werror

library format-impl
  exposed-modules:  Impl.Str
  hs-source-dirs:   tests
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(werror)
    ghc-options: -Werror

executable gen-tests
  main-is:          Main.hs
  hs-source-dirs:   tests/gen
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(werror)
    ghc-options: -Werror

test-suite format
  type:             exitcode-stdio-1.0
  main-is:          format.hs
  other-modules:    GeneratedSpec
  mixins:           th-printf-indef  requires (Str as Impl.Str)
  hs-source-dirs:   tests
  build-depends:    base
                  , HUnit
                  , QuickCheck
                  , format-impl
                  , hspec
                  , template-haskell
                  , th-printf-indef
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-type-defaults
