name:               th-printf-str
version:            0.1.0.0
synopsis:           Template Haskell printf
description:        Quasiquoters for printf, producing @String@
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
tested-with:        GHC == 8.4.3
category:           Text
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      2.0

library
  reexported-modules: Language.Haskell.Printf.String
  mixins:             th-printf-indef (Language.Haskell.Printf as Language.Haskell.Printf.String)
                             requires (Str as StrJustified)
  hs-source-dirs:     src
  build-depends:      base == 4.*, str-justified, th-printf-indef
  default-language:   Haskell2010

library str-justified
  exposed-modules:  StrJustified
  hs-source-dirs:   src
  build-depends:    base, str-string
  default-language: Haskell2010
