name:               th-printf-text
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
tested-with:        GHC == 8.4.3, GHC == 8.2.2
category:           Text
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      2.0

library
  reexported-modules: TH.Printf.Text
  mixins:             th-printf-indef (TH.Printf as TH.Printf.Text)
                             requires (Str as TextJustified)
  build-depends:      base == 4.*, text-justified, th-printf-indef
  default-language:   Haskell2010

library text-justified
  exposed-modules:  TextJustified
  hs-source-dirs:   src
  build-depends:    base, str-text, text
  default-language: Haskell2010
