name:               th-printf-text
version:            0.1.0.0
synopsis:           Template Haskell printf
description:        Quasiquoters for printf, producing @Text@
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
tested-with:        GHC == 8.4.3
category:           Text
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      2.0

library
  exposed-modules:  Language.Haskell.Printf.Text
                    Language.Haskell.Printf.Text.Lazy
  mixins:           th-printf-indef (Language.Haskell.Printf as PrintfLazy)
                           requires (Str as Text.Lazy)
                  , th-printf-indef (Language.Haskell.Printf as Printf)
                           requires (Str as Text.Strict)
  hs-source-dirs:   src
  build-depends:    base == 4.*, text-impl, th-printf-indef
  default-language: Haskell2010

library text-impl
  exposed-modules:  Text.Lazy
                    Text.Strict
  hs-source-dirs:   src
  build-depends:    base, str-text, text
  default-language: Haskell2010
